Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130478

QVideoFormat::isSupported returns false with supported video codecs if audio codec is not specified

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.2, 6.9.0 FF
    • 6.5, 6.8
    • Multimedia
    • None
    • All
    • e160bc67e (dev), 3263889bd (6.8), b102494a6 (dev), 9b9880971 (6.8), 27dba7a66 (dev), 80ccd110c (6.8)
    • Multimedia wk 43-44

      QVideoFormat::isSupported returns false with supported video codecs if audio codec is not specified. It requires that a audio codec is specified, even if audio recording is not intended.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            johanseg Jøger Hansegård
            johanseg Jøger Hansegård
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: